# recipe_analysis

./: .gitignore  Cargo.toml  all.coo  breakfast.coo  coarse.txt  cocktail.coo  cocktail_ingredients  coolist.coo  dessert.coo  italian.coo  italian_ingredients  parse.sh  vege.coo  vege_ingredients
migrations/2020-02-04-174252_nyt/: down.sql  up.sql
migrations/2020-06-16-182512_schema_overhaul/: down.sql  up.sql
src/: co_occurrence.rs  embed.rs  error.rs  expanded.rs  hierarchy.rs  lib.rs  louvain.rs  models.rs  nytc.rs  process.rs  process_ny.rs  recipe.rs  schema.rs  scraper.rs  table.rs  training.rs
src/scrapers/: mod.rs  nytcooking.rs
src/src/: schema.rs
temp/: README
