[package]
name = "recipe_analysis"
version = "0.2.0"
authors = ["aujxn <ajn6@pdx.edu>"]
edition = "2018"
license = "MPL"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "1.3"
rand = "0.7"
matrixlab = { git = "https://github.com/aujxn/matrixlab" }
bimap = "0.4"
anyhow = "1.0"
itertools = "0.9"
tokio-postgres = "0.5"
tokio = { version = "0.2", features = ["fs", "stream", "sync", "time", "macros"] }
futures = "0.3"
