[package]
name = "recipe_analysis"
version = "0.2.0"
authors = ["aujxn <ajn6@pdx.edu>"]
edition = "2018"
license = "MPL"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "1.3"
rand = "0.8"
matrixlab = { git = "https://github.com/aujxn/matrixlab" }
bimap = "0.6"
anyhow = "1.0"
itertools = "0.10.3"
tokio-postgres = "0.7.5"
tokio = { version = "1.16.1", features = ["full"] }
futures = "0.3"
